fixed spacing and border of icons in display

--- a/styles/_body.scss
+++ b/styles/_body.scss
@@ -1,4 +1,10 @@
+@use "./variables" as *;
+
 * {
     padding: 0;
     margin: 0;
+}
+
+body {
+    background-color: $color-background;
 }
