--- a/styles/_display.scss
+++ b/styles/_display.scss
@@ -3,8 +3,26 @@
 // Mobile
 .display {
     height: 35vh;
-    background-color: $color-background;
     font-family: $font-primary;
+
+    &__top {
+        margin-top: 1rem;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    &__options {
+        background-color: $color-input-background;
+        border-radius: 0.5rem;
+        height: 1.5rem;
+        width: 15%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 
     &__bottom {
         height: 87.5%;
