--- a/styles/_inputs.scss
+++ b/styles/_inputs.scss
@@ -11,7 +11,6 @@
     border-top-right-radius: 10px;
 
     &__button {
-        border: 2px solid red;
         display: flex;
         justify-content: center;
         align-items: center;
